2013-03-08 Gregory L. Lee <lee218@llnl.gov>
	* README : updated content

2013-03-05 Gregory L. Lee <lee218@llnl.gov>
	* : updated license information

2013-03-02 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : log usage with specification of STAT_USAGE_LOG env var
	* scripts/stat-[gui|cl].in : test for existence of usage log
	* src/STAT_FrontEnd.C : allow launch of CPs on app (I/O) nodes on BlueGene

2013-02-27 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STAT.in : don't set -A by default

2013-02-26 Matthew P. LeGendre <lee218@llnl.gov>
	* src/STAT_BackEnd.[h,C] : added timeout support for certain operations

2013-02-25 Gregory L. Lee <lee218@llnl.gov>
	* scripts/*.in : respect user-specified STAT_XPLAT_RSH and STAT_LMON_RSH specification

2013-02-21 Gregory L. Lee <lee218@llnl.gov>
	* scripts/stat_merge_base.py : fixed subprocess handling of arguments with no required sub arg

2013-02-16 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_BackEnd.C : moved statRelativeRankToAbsoluteRank out of GROUP_OPS #ifdef

2013-02-15 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : need to strdup remoteNode into proctab for serial attach
	* doc/src/* : updated documentation

2013-02-08 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : added STAT_FE_HOSTNAME env variable
	* scripts/*.in : check for [STAT|LMON|MRNET]_PREFIX env vars and adjust	paths accordingly
	* config/x_ac_debuglibs.m4 : added --enable-[libdwarf|stackwalker|-rpm to look for includes/libs in /usr

2013-01-30 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : use std::string instead of char * for topo generation
	* : Fixed memory leaks, dead code, etc. identified by Intel's Static Security Analysis Tool

2013-01-30 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATGUI.py : clear proctab on detach
	* : MRNet 3.0 and MRNet 3.1 backwards compatibility fixes
	* : StackWalker 8.0 and 2.0 backwards compatibility fixes