@@ -1,3 +1,15 @@
+2013-03-13 Gregory L. Lee <lee218@llnl.gov>
+	* src/STAT_BackEnd.[h,C], src/STAT_CircularLogs.[h,C] : code clean up
+	* src/STAT_BackEnd.[h,C], src/MRNetSymbolReader.h : use SW_VERSION_8_1_0 instead of 8_0_1
+	* src/MRNetSymbolReader.h : fixed SW/Symtab version dependences
+
+2013-03-13 Matthew P. LeGendre <legendre1@llnl.gov>
+	* src/STAT_BackEnd.[h,C] : added signal handler to dump debug info on crash
+
+2013-03-12 Matthew P. LeGendre <legendre1@llnl.gov>
+	* src/STAT_BackEnd.[h,C] : modified to use circular log
+	* src/STAT_CircularLogs.[h,C] : added circular log to catch tail of debug messages
+
 2013-03-08 Gregory L. Lee <lee218@llnl.gov>
 	* README : updated content
 
